# TestSubmission

./: README.md  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
po/: meson.build
src/: application.vala  main.vala  meson.build  window.ui  window.vala
